@@ -33,6 +33,7 @@ class Test:
         self.must_fail = False
         self.blacklist_platforms = []
         self.qt4compat = False
+        self.only_qt = False
 
     def isScript(self):
         return self.filename.endswith(".sh")
@@ -145,6 +146,9 @@ def load_json(check_name):
                 test.expects_failure = t['expects_failure']
             if 'qt4compat' in t:
                 test.qt4compat = t['qt4compat']
+            if 'only_qt' in t:
+                test.only_qt = t['only_qt']
+
 
             if not test.checks:
                 test.checks.append(test.check.name)
@@ -205,6 +209,9 @@ def clazy_standalone_command(test, qt):
     if test.qt4compat:
         result = " -qt4-compat " + result
 
+    if test.only_qt:
+        result = " -only-qt " + result
+
     return result
 
 def clazy_command(qt, test, filename):
@@ -218,6 +225,9 @@ def clazy_command(qt, test, filename):
 
     if test.qt4compat:
         result = result + " -Xclang -plugin-arg-clang-lazy -Xclang qt4-compat "
+
+    if test.only_qt:
+        result = result + " -Xclang -plugin-arg-clang-lazy -Xclang only-qt "
 
     if test.link and _platform.startswith('linux'): # Linking on one platform is enough. Won't waste time on macOS and Windows.
         result = result + " " + link_flags()
