@@ -53,3 +53,5 @@
     connect-3arg-lambda
   - missing-qobject-macro is now a level2 check, instead of level1. Because,
     people can omit Q_OBJECT intentionally.
+  - Added -only-qt option, which will make clazy bailout early on non-Qt files.
+    For this purpose, the definition of a Qt file is whenever -DQT_CORE_LIB is passed, which is usually the case in most build systems.
